atc/atc-dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atc-dashboard
  namespace: atc
  labels:
    app: atc-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: atc-dashboard
  template:
    metadata:
      labels:
        app: atc-dashboard
      annotations:
        reloader.stakater.com/auto: "true"
    spec:
      containers:
        - name: atc-dashboard
          image: harbor.i.shion1305.com/shion1305/atc-dashboard:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "10m"
            limits:
              memory: "1024Mi"
              cpu: "2000m"
