atc/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gmocoin-exec-alert
  namespace: atc
  labels:
    app: gmocoin-exec-alert
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gmocoin-exec-alert
  template:
    metadata:
      labels:
        app: gmocoin-exec-alert
      annotations:
        reloader.stakater.com/auto: "true"
    spec:
      containers:
        - name: gmocoin-exec-alert
          image: ghcr.io/shion1305/gmocoin-exec-alert:sha-551e174
          resources:
            requests:
              memory: "128Mi"
              cpu: "10m"
            limits:
              memory: "256Mi"
              cpu: "250m"
