atc/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: atc
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:13.0.2
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: grafana-provisioning
              mountPath: /etc/grafana/provisioning/datasources
              readOnly: true
            - name: grafana-storage
              mountPath: /var/lib/grafana
      volumes:
        - name: grafana-provisioning
          emptyDir: {}
        - name: template-volume
          configMap:
            name: grafana-datasources-template
        - name: grafana-storage
          emptyDir: {}
