atc/ws-stream-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws-stream
  namespace: atc
  labels:
    app: ws-stream
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ws-stream
  template:
    metadata:
      labels:
        app: ws-stream
    spec:
      containers:
      - name: ws-stream
        image: ghcr.io/shion1305/crypto-auto-trading/ws-stream:sha-9e32011
        resources:
          requests:
            memory: "128Mi"
            cpu: "10m"
          limits:
            memory: "512Mi"
            cpu: "500m"
