atc/atc-dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atc-dashboard
  namespace: atc
spec:
  type: ClusterIP
  selector:
    app: atc-dashboard
  ports:
    - name: http
      port: 80
      targetPort: 3000
