atc/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-historical-source
  namespace: atc
  labels:
    app: minio-historical-source
spec:
  type: ClusterIP
  selector:
    app: minio-historical-source
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9090
      targetPort: 9090
