atc/prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: atc
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: prometheus
    prometheus: atc
  ports:
    - name: http-web
      port: 9090
      targetPort: 9090
